fix(navigation): adjust padding for navigation links for better spacing

--- a/client/src/common/components/Navigation/Navigation.module.css
+++ b/client/src/common/components/Navigation/Navigation.module.css
@@ -18,7 +18,7 @@
 .nav ul li a {
     display: block;
     height: 48px;
-    padding: 0 24px;
+    padding: 0 16px;
     align-content: center;
     text-align: center;
     white-space: nowrap;
